--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@nestjs/mongoose": "^8.0.0",
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^7.6.15",
+    "bcrypt": "^5.0.1",
+    "express-session": "^1.17.2",
     "mongoose": "^5.13.7",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
@@ -38,7 +40,9 @@
     "@nestjs/cli": "^7.6.0",
     "@nestjs/schematics": "^7.3.0",
     "@nestjs/testing": "^7.6.15",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.11",
+    "@types/express-session": "^1.17.4",
     "@types/jest": "^26.0.22",
     "@types/multer": "^1.4.7",
     "@types/node": "^14.14.36",
