--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@nestjs/mongoose": "^8.0.0",
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^7.6.15",
+    "@nestjs/platform-socket.io": "^8.0.9",
     "@nestjs/serve-static": "^2.2.2",
+    "@nestjs/websockets": "^8.0.9",
     "bcrypt": "^5.0.1",
     "express-session": "^1.17.2",
     "mongoose": "^5.13.7",
@@ -49,6 +51,7 @@
     "@types/multer": "^1.4.7",
     "@types/node": "^14.14.36",
     "@types/passport-local": "^1.0.34",
+    "@types/socket.io": "^3.0.2",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
